Month view is working

--- a/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/monthview.xml
+++ b/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/monthview.xml
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <v-vertical-layout>
 	<v-vertical-layout>
-		<v-label>Monat:</v-label>
-		<v-native-select _id="year">
-		</v-native-select>
-		<v-native-select _id="month"></v-native-select>
+		<v-horizontal-layout>
+			<v-label width="75px">Monat:</v-label>
+			<v-native-select _id="month">
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+				<option>7</option>
+				<option>8</option>
+				<option>9</option>
+				<option>10</option>
+				<option>11</option>
+				<option>12</option>
+			</v-native-select>
+		</v-horizontal-layout>
+		<v-horizontal-layout>
+			<v-label  width="75px">Jahr:</v-label>
+			<v-native-select _id="year"></v-native-select>
+		</v-horizontal-layout>
 	</v-vertical-layout>
 	<v-table _id="table" caption="Monatsübersicht"></v-table>
 </v-vertical-layout>
