--- a/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/hourview.xml
+++ b/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/hourview.xml
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<horizontal-layout size-full :expand></horizontal-layout>
+<horizontal-layout size-full :expand=""></horizontal-layout>
