Viele Neuerungen, darunter der Reiter "Status", die korrekte Darstellung des GUI von DayView (Ladezeit: ~2.5 sek), und die Möglichkeit, Hammerschläge darzustellen. Hierbei gibt es jedoch noch ein paar Probleme.

--- a/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/quarterview.xml
+++ b/Optocounter/src/main/java/de/itsw/schaefer/optocounter/UI/Views/quarterview.xml
@@ -1,3 +1,2 @@
 <!DOCTYPE html>
-<horizontal-layout size-full :expand="">
-</horizontal-layout>
+<horizontal-layout size-full :expand=""></horizontal-layout>
